--- a/css/style.css
+++ b/css/style.css
@@ -428,11 +428,37 @@ textarea {
     line-height: 20px;
     text-transform: uppercase;
     border: none;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
 }
+.btn::after {
+    content: "";
+    background: #ecf0f1;
+    position: absolute;
+    z-index: -1;
+    /* padding: 0.85em 0.75em; */
+    /* display: block; */
+    transition: all 0.4s;
+    left: 0;
+    right: 0;
+    top: -100%;
+    bottom: 100%;
+  }
+  .btn:hover::after {
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    transition: all 0.35s;
+   
+}
+
+   
   .highlight-red {
       color:#FF5050;
   }
-  .dot {
+  /* .dot {
     cursor: pointer;
     height: 10px;
     width: 10px;
@@ -441,7 +467,7 @@ textarea {
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
-  }
+  } */
   .header__wrapper {
     margin: 0 auto;
     max-width: 1720px;
@@ -650,6 +676,10 @@ textarea {
     max-width: 160px;
     background-color: #fff;
 }
+.intro__btn:hover {
+    color: #FF5050;
+}
+
 /*Offer*/
 .offer {
     margin-bottom: 100px;
@@ -801,15 +831,17 @@ textarea {
         justify-content: space-between;
     }
     .shop-all-btn {
-        
         color: #fff;
         background: #FF5050;
         
        width: 150px;
         padding: 20px 0;
        align-self: flex-end;
-
    }
+   .shop-all-btn:hover {
+       color: #0D0D0D;
+   }
+  
     .shop-all__title {
         margin-bottom: 50px;
     }
@@ -991,6 +1023,9 @@ textarea {
         height: 60px;
         margin-left: -95px;
     }
+    .plan__item-btn:hover {
+        color: #0D0D0D;
+    }
     
     .plan__message {
         text-align: center;
@@ -1036,6 +1071,9 @@ textarea {
         background: #FF5050;
         color: #fff;
         padding: 20px 40px;
+    }
+    .main-article-btn:hover {
+        color: #0D0D0D;
     }
     /*shop slider*/
     .shop-slider {
@@ -1085,6 +1123,10 @@ textarea {
         padding: 20px 40px;
         color: #fff;
     }
+    .slider__item-btn:hover {
+        color: #0D0D0D;
+    }
+    
     .slider__item-caption span {
         text-transform: uppercase;
         margin-bottom: 20px;
@@ -1098,10 +1140,11 @@ textarea {
         left: 6%;
        
     }
-    .dot-slider {
+    .shop-slider__dots .swiper-pagination-bullet {
         border: 1px solid #fff;
+        background-color: transparent;
       }
-      .dot-slider.active-dot {
+      .shop-slider__dots .swiper-pagination-bullet-active {
           background: #fff;
       }
       /*section shop*/
@@ -1188,26 +1231,18 @@ textarea {
       /*reviews*/
       .reviews {
           background: #F8F8F8;
-          padding: 100px 0 200px 0;
-          position: relative;
-          margin-bottom: 100px;
           
+          position: relative;
+          margin-bottom: 100px;  
       }
       .reviews__carousel {
-          overflow: hidden;
+          position: relative;
+          padding: 100px 0 100px 0;
       }
-      .reviews__carousel-wrapper {
-          display: flex;
-          
-      }
-      .reviews__item {
-        flex: 0 0 33.33%;
-      }
+     
       .reviews__item-wrapper {
           margin: 0 67px;
           text-align: center;
-          
-
       }
       .review__title {
           color:#FF5050;
@@ -1215,8 +1250,7 @@ textarea {
           font-size: 20px;
           font-weight: 700;
           line-height: 18px;
-          margin-bottom: 50px;
-            
+          margin-bottom: 50px;   
       }
       blockquote p::before {
         content: '\201C';
@@ -1225,17 +1259,20 @@ textarea {
     blockquote p::after {
         content: '\201D';
     }
-    .review-slider__dots {
+    .reviews__carousel .pagination {
         position: absolute;
-        right: 47%;
-        bottom: 10%;  
+        bottom: 5%;
+        left: 0;
+        z-index: 20;
     }
-    .dot-review {
-        border: 1px solid #0D0D0D;
-      }
-      .dot-review.active-dot {
-          background: #0D0D0D;
-      }
+    .reviews__carousel .swiper-pagination-bullet {
+        background-color: transparent;
+        border: 1px solid #000;
+    }
+    .reviews__carousel .swiper-pagination-bullet-active {
+        background: #000;
+    }
+    
 /*companies*/
 .companies {
     margin-bottom: 110px;
